--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 }
 
 .bg-hero {
-    background: url(../img/carousel-1.jpg) top right no-repeat;
+    background: url(../img/ph4.jpg) top right no-repeat;
     background-size: cover;
 }
 
@@ -215,49 +215,9 @@
     color: var(--secondary);
 }
 
-.bg-testimonial {
-    background: url(../img/testimonial.jpg) top center no-repeat;
-    background-size: cover;
-}
 
-.testimonial-carousel {
-    background: rgba(52, 173, 84, .7);
-}
 
-.testimonial-carousel .owl-nav {
-    position: absolute;
-    width: calc(100% + 46px);
-    height: 46px;
-    top: calc(50% - 23px);
-    left: -23px;
-    display: flex;
-    justify-content: space-between;
-    z-index: 1;
-}
 
-.testimonial-carousel .owl-nav .owl-prev,
-.testimonial-carousel .owl-nav .owl-next {
-    position: relative;
-    width: 46px;
-    height: 46px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--primary);
-    background: #FFFFFF;
-    font-size: 22px;
-    transition: .5s;
-}
-
-.testimonial-carousel .owl-nav .owl-prev:hover,
-.testimonial-carousel .owl-nav .owl-next:hover {
-    color: var(--secondary);
-}
-
-.testimonial-carousel .owl-item img {
-    width: 120px;
-    height: 120px;
-}
 
 .blog-item img {
     transition: .5s;
